Foi feito o header e o corpo html da pagina

--- a/Index.html
+++ b/Index.html
@@ -9,48 +9,121 @@
     <link rel="stylesheet" href="stylechuva.css">
 
 
+
 </head>
 
-<body> 
+<body>
     <main id="conteiner">
+        <aside>
+            <nav class="sidemenu">
+                <h1 class="slaca"> SLACA 2019 </h1>
+                <img class="slacaimg" src="imagens/menu-item/dewey 4.png" alt="logo slaca">
+                <ul>
+                    <li class="item-sidemenu">
+                        <a class="link-sidemenu">Apresentação</a>
+                    </li>
+                    <li class="item-sidemenu">
+                        <a class="link-sidemenu">Comitês</a>
+                    </li>
+                    <li class="item-sidemenu">
+                        <a class="link-sidemenu">Autores</a>
+                    </li>
+                    <li class="item-sidemenu">
+                        <a class="link-sidemenu">Trabalhos</a>
+                    </li>
+                    <li class="item-sidemenu">
+                        <a class="link-sidemenu">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
 
-        <nav class="sidemenu">
-            <h1 class="slaca"> SLACA 2019 </h1>
-            <img class="slacaimg" src="imagens/menu-item/dewey 4.png" alt="logo slaca">
-            <ul>
-                <li class="item-sidemenu">
-                    <a class="link-sidemenu">Apresentação</a>
-                </li>
-                <li class="item-sidemenu">
-                    <a class="link-sidemenu">Comitês</a>
-                </li>
-                <li class="item-sidemenu">
-                    <a class="link-sidemenu">Autores</a>
-                </li>
-                <li class="item-sidemenu">
-                    <a class="link-sidemenu">Trabalhos</a>
-                </li>
-                <li class="item-sidemenu">
-                    <a class="link-sidemenu">Contato</a>
-                </li>
-            </ul>
-        </nav>
         <div class="content">
             <header class="header">
-                <p class="pheader1">Anais do Simpósio Latino Americano de Ciências de Alimentos </p>
-                <h1 class="h1header">Anais do 13º Simpósio Latino Americano de Ciência de Alimentos </h1>
-                <p class="pheader2">ISSN: 123-5678</p>
+                <div class="content-header">
+                    <p class="pheader1">Anais do Simpósio Latino Americano de Ciências de Alimentos </p>
+                    <h1 class="h1header">Anais do 13º Simpósio Latino Americano de Ciência de Alimentos </h1>
+                    <p class="pheader2">ISSN: 123-5678</p>
+                </div>
+
+                <div class="dropdown">
+                    <img src="imagens/language_image.png" />
+                    <select class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <option class="dropdown-item" href="#">Alguma ação</option>
+                        <option class="dropdown-item" href="#">Outra ação</option>
+                        <option class="dropdown-item" href="#">Alguma coisa aqui</option>
+                    </select>
+                </div>
+
                 <div class="login">
                     <p class="plogin">
                         <nobr>Bem Vindo!</nobr>
                     </p>
                     <p class="email">alguem12@galoascience.com</p>
                 </div>
-
-
             </header>
+            <section class="container-section">
+                <h1>Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do
+                    município de Campinas/SP </h1>
+                <div class="overlay-video">
+                    <p class=poverlayvideo>Análise sensorial de preparações funcionais desenvolvidas para escolares
+                        entre 09 e 15 anos, do município de Campinas/SP</p>
+                    <div class="content-video">
 
-        </div>
+                        <!-- <img src="imagens/videoicon.png"/> -->
+                        <h2>Beatriz Christiane Melo</h2>
+                        <p>FCA / Universidade Estadual de Campinasbph</p>
+                    </div>
+                </div>
+
+                <section class="Resumo">
+                    <h1> Resumo </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis
+                        felis ut, commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus.
+                        Fusce auctor eros sed magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim
+                        accumsan sit amet. Donec finibus nisi tellus, ut viverra lorem vestibulum ut. Phasellus
+                        condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque
+                        sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus condimentum orci
+                        id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
+                        sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim
+                        accumsan sit ametl accumsant... ver mais</p>
+                </section>
+                <section Class="Discussoes">
+                    <h1>Compartilhe suas ideias ou dúvidas com os autores!</h1>
+                    <div class="icones">
+                        <img src="imagens/icone1.png" />
+                        <img src="imagens/icone2.png" />
+                        <img src="imagens/icone3.png" />
+                    </div>
+                    <button>+criar tópico</button>
+
+                    <div class="box-perguntas">
+
+                        <h1>Assunto da pergunta aparece aqui</h1>
+                        <p>Carlos Henrique Santos</p>
+                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
+                            e impacto de processo formativo situado impacto de processo formativo processo...</p>
+                        <img src="imagens/mais_informações.png" />
+                        <button>icone do coração</button>
+                    </div>
+                    <div class="box-perguntas">
+
+                        <h1>Assunto da pergunta aparece aqui</h1>
+                        <p>Carlos Henrique Santos</p>
+                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
+                            e impacto de processo formativo situado impacto de processo formativo processo...</p>
+                        <img src="imagens/mais_informações.png" />
+                        <button>icone do coração</button>
+                    </div>
+                </section>
+                <footer>
+                    <img src="imagens/imagem_footer.png">
+                </footer>
+
+
+            </section>
+
+
 
     </main>
 </body>
