--- a/Index.html
+++ b/Index.html
@@ -63,62 +63,64 @@
                 </div>
             </header>
             <section class="container-section">
-                <h1>Análise sensorial de preparações funcionais desenvolvidas para escolares entre 09 e 15 anos, do
-                    município de Campinas/SP </h1>
-                <div class="overlay-video">
-                    <p class=poverlayvideo>Análise sensorial de preparações funcionais desenvolvidas para escolares
-                        entre 09 e 15 anos, do município de Campinas/SP</p>
-                    <div class="content-video">
-
-                        <!-- <img src="imagens/videoicon.png"/> -->
-                        <h2>Beatriz Christiane Melo</h2>
-                        <p>FCA / Universidade Estadual de Campinasbph</p>
-                    </div>
+                <img class="video-player" src="imagens/dewey_1.png" />
+                <img class="marrom" src="imagens/vídeo_overlay.png" />
+                <div class="icon-and-text">
+                    <img class="video-icon" src="imagens/videoicon.png" />
+                    <div class="video-text">
+                    <p>Beatriz Christiane Melo</p>
+                    <p>FCA / Universidade Estadual de Campinas</p>
                 </div>
+                </div>
+            </section>
 
-                <section class="Resumo">
-                    <h1> Resumo </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis
-                        felis ut, commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus.
-                        Fusce auctor eros sed magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim
-                        accumsan sit amet. Donec finibus nisi tellus, ut viverra lorem vestibulum ut. Phasellus
-                        condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque
-                        sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus condimentum orci
-                        id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
-                        sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim
-                        accumsan sit ametl accumsant... ver mais</p>
-                </section>
-                <section Class="Discussoes">
-                    <h1>Compartilhe suas ideias ou dúvidas com os autores!</h1>
-                    <div class="icones">
-                        <img src="imagens/icone1.png" />
-                        <img src="imagens/icone2.png" />
-                        <img src="imagens/icone3.png" />
-                    </div>
-                    <button>+criar tópico</button>
+            <section class="resumo">
+                <h1> Resumo </h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis
+                    felis ut, commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus.
+                    Fusce auctor eros sed magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim
+                    accumsan sit amet. Donec finibus nisi tellus, ut viverra lorem vestibulum ut. Phasellus
+                    condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque
+                    sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus condimentum orci
+                    id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
+                    sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim
+                    accumsan sit ametl accumsant... <button>ver mais</button>
+            </section>
+            <section Class="discussoes">
+                <h1>Discussoes</h1>
+                <h2>Compartilhe suas ideias ou dúvidas com os autores!</h2>
+                <div class="icones">
+                    <img src="imagens/icone1.png" />
+                    <img src="imagens/icone2.png" />
+                    <img src="imagens/icone3.png" />
+                </div>
+                <p>Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade? Deixe seus
+                    questionamentos ou sugestões para o autor!</p>
+                <button input type="button">+criar tópico</button>
 
-                    <div class="box-perguntas">
+                <div class="box-perguntas">
 
-                        <h1>Assunto da pergunta aparece aqui</h1>
-                        <p>Carlos Henrique Santos</p>
-                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
-                            e impacto de processo formativo situado impacto de processo formativo processo...</p>
-                        <img src="imagens/mais_informações.png" />
-                        <button>icone do coração</button>
-                    </div>
-                    <div class="box-perguntas">
+                    <h1>Assunto da pergunta aparece aqui</h1>
+                    <p>Carlos Henrique Santos</p>
+                    <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
+                        e impacto de processo formativo situado impacto de processo formativo processo...</p>
+                    <img src="imagens/mais_informações.png" />
+                    <button>icone do coração</button>
+                </div>
+                <div class="box-perguntas">
 
-                        <h1>Assunto da pergunta aparece aqui</h1>
-                        <p>Carlos Henrique Santos</p>
-                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
-                            e impacto de processo formativo situado impacto de processo formativo processo...</p>
-                        <img src="imagens/mais_informações.png" />
-                        <button>icone do coração</button>
-                    </div>
-                </section>
-                <footer>
-                    <img src="imagens/imagem_footer.png">
-                </footer>
+                    <h1>Assunto da pergunta aparece aqui</h1>
+                    <p>Carlos Henrique Santos</p>
+                    <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
+                        e impacto de processo formativo situado impacto de processo formativo processo...</p>
+                    <img src="imagens/mais_informações.png" />
+                    <button>icone do coração</button>
+                </div>
+            </section>
+            <footer>
+                <img src="imagens/imagem_footer.png">
+
+            </footer>
 
 
             </section>
