--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,14 @@
 <html lang="pt-br">
 
 <head>
+    <!-- The HTML code for the website. -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototipo Navegavel </title>
     <link rel="stylesheet" href="stylechuva.css">
+    <script src="https://kit.fontawesome.com/4922e5c327.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 
 
@@ -14,6 +17,7 @@
 
 <body>
     <main id="conteiner">
+        <!-- Creating a side menu. -->
         <aside>
             <nav class="sidemenu">
                 <h1 class="slaca"> SLACA 2019 </h1>
@@ -49,83 +53,207 @@
                 <div class="dropdown">
                     <img src="imagens/language_image.png" />
                     <select class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <option class="dropdown-item" href="#">Alguma ação</option>
-                        <option class="dropdown-item" href="#">Outra ação</option>
-                        <option class="dropdown-item" href="#">Alguma coisa aqui</option>
+                        <option class="dropdown-item" href="#">PT-BR</option>
+                        <option class="dropdown-item" href="#">EN-US</option>
+                        <option class="dropdown-item" href="#">...</option>
                     </select>
                 </div>
 
                 <div class="login">
-                    <p class="plogin">
-                        <nobr>Bem Vindo!</nobr>
-                    </p>
-                    <p class="email">alguem12@galoascience.com</p>
+                    <div class="bemvindo">
+                        <p class="plogin">
+                            Bem Vindo!
+                        </p>
+                        <p class="email">alguem12@galoascience.com</p>
+                    </div>
+
+                    <img class="foto-login" src="imagens/image.png" />
+                    <div class="notificacao">2</div>
                 </div>
             </header>
-            <section class="container-section">
-                <img class="video-player" src="imagens/dewey_1.png" />
-                <img class="marrom" src="imagens/vídeo_overlay.png" />
-                <div class="icon-and-text">
-                    <img class="video-icon" src="imagens/videoicon.png" />
-                    <div class="video-text">
-                    <p>Beatriz Christiane Melo</p>
-                    <p>FCA / Universidade Estadual de Campinas</p>
+            <div class="margin-content">
+                <!-- Creating a container for the video and the details of the video. -->
+                <div class="container-banner">
+                    <div class="container-video">
+                        <h1 class="content-title">Análise sensorial de preparações funcionais desenvolvidas para
+                            escolares
+                            entre 09 e 15 anos, do município de Campinas/SP </h1>
+                        <section class="content-video">
+
+                            <img class="video-player" src="imagens/dewey_1.png" />
+                            <img class="marrom" src="imagens/vídeo_overlay.png" />
+                            <div class="icon-and-text">
+                                <img class="video-icon" src="imagens/videoicon.png" />
+                                <div class="video-text">
+                                    <p class="video-title">Beatriz Christiane Melo</p>
+                                    <p class="video-subtitle">FCA / Universidade Estadual de Campinas</p>
+                                </div>
+                            </div>
+                            <p class="top-text-video">Análise sensorial de preparações funcionais desenvolvidas <br>
+                                para
+                                escolares
+                                entre 09 e 15 anos, do município de <br>Campinas/SP </p>
+                        </section>
+                    </div>
+                    <div class="container-detalhes">
+                        <div class="detalhes-buttons">
+                            <button class="button-download"><i class="fa-solid fa-download"></i> Download</button>
+                            <button class="button-small"><i class="fa-solid fa-star"></i></button>
+                            <button class="button-small"><img src="imagens/doi.svg"></img></button>
+                            <p>COMO CITAR ESSE TRABALHO?</p>
+                        </div>
+                        <div class="content-detalhes">
+                            <h1 class="title-detalhes">Detalhes</h1>
+                            <div class="text-detalhes">
+                                <p>Tipo de Apresentação: <span class="spam-bold">Pôster</span></p>
+                                <p>Eixo temático: <span class="spam-bold">Alimentação e saúde (AS)</span></p>
+                                <p>Palavras-chaves: <span class="spam-bold">Alimentos funcionais, alimentação
+                                        escolar.</span></p>
+                                <br>
+                                <h3>Autores</h3>
+
+                                <p>Galileo Galilei¹</p>
+                                <p>Berta Lange de Morretes²</p>
+                                <p>Isaac Newton³</p>
+                                <p>Cesar Lattes¹</p>
+                                <p>Stephen Hawking⁴</p>
+                                <br>
+
+
+                                <p>Universidade Estadual de Campinas</p>
+                                <p>²Universidade de São Paulo</p>
+                                <p>³Instituto Nacional de Pesquisas Espaciais</p>
+                                <p>⁴Universidade Federal do Rio de Janeiro</p>
+                            </div>
+
+
+                        </div>
+
+                    </div>
                 </div>
+            </div>
+            <!-- Creating a button that when clicked will show more text. -->
+            <div class="resumo-painel">
+                <h1 class="resumo-title">Resumo</h1>
+                <div class="resumo-margin">
+
+                    <p class="resumo-content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+                        vitae turpis auctor, mollis felis ut, commodo turpis. Phasellus felis mauris, egestas eget
+                        cursus et, iaculis quis lacus. Fusce auctor eros sed magna ultricies gravida. Etiam aliquam
+                        dictum nisl, vel aliquet enim accumsan<span id="pontos">...</span><span id="mais">sit amet.
+                            Donec finibus nisi tellus, ut viverra lorem
+                            vestibulum ut. Phasellus condimentum orci id leo condimentum lobortis et non lorem. Sed
+                            id
+                            nisl metus. Quisque sollicitudin ligula in sapien scelerisque, ac gravida eros
+                            vestibulum.
+
+                            Fusce vitae luctus dui. Donec id euismod mauris, in volutpat urna. Proin dapibus
+                            consequat
+                            feugiat. Proin dictum justo arcu, quis vestibulum augue lacinia quis. Sed dignissim dui
+                            nulla, ut faucibus mauris sodales id. Aliquam erat volutpat. Maecenas dolor enim,
+                            tincidunt
+                            id elit non, suscipit interdum turpis. Etiam finibus urna libero, eget interdum eros
+                            volutpat ullamcorper. Pellentesque et pretium lorem. Aenean interdum quis diam ac
+                            porttitor.
+                            Cras nec ipsum pulvinar, pharetra libero non, ornare enim. Etiam in laoreet odio.
+
+                            Nam eget tristique elit, at fermentum tellus. Mauris scelerisque ligula id eleifend
+                            feugiat.
+                            Donec eleifend vehicula sem nec dapibus. Integer scelerisque neque dui, in lacinia erat
+                            molestie eu. Phasellus maximus dui eget lacus porta tempor. Ut ex nibh, dignissim quis
+                            purus
+                            semper, efficitur facilisis turpis. Praesent blandit elementum ultricies. Aliquam sit
+                            amet
+                            enim sit amet nulla pulvinar lobortis consectetur non odio. Phasellus at lacus
+                            hendrerit,
+                            vulputate nisi sit amet, viverra mauris. Etiam eu scelerisque orci. Quisque sagittis, mi
+                            vitae pharetra iaculis, orci elit eleifend massa, eu posuere mauris odio id odio. Morbi
+                            eu
+                            libero luctus, consectetur lorem vel, interdum sapien. Aenean in porta arcu. Maecenas eu
+                            maximus massa.
+
+                            Praesent velit dolor, dignissim sed quam ac, efficitur porta justo. Pellentesque porta
+                            pharetra felis ut hendrerit. Nulla facilisi. Aliquam erat volutpat. Nunc sit amet
+                            faucibus
+                            quam. Maecenas dapibus luctus dolor at viverra. Duis nec fringilla libero. Duis risus
+                            nibh,
+                            viverra ac orci nec, iaculis dictum sem. Aliquam at malesuada arcu. Aliquam erat
+                            volutpat.
+                            Donec varius ipsum purus, ut vehicula purus placerat vitae. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. </span></p>
+                    <button onclick="leiamais()" id="buttonleiamais">Ver Mais</button>
                 </div>
+
+            </div>
+            <!-- Creating a section with a title and a button. When the button is clicked, a form is
+            displayed. -->
+            <section class="discussoes-container">
+                <h1 class="discussoes-h1">Discussoes</h1>
+                <div class="discussoes-content" id="discussoes-content">
+                    <h2 class="discussoes-h2">Compartilhe suas ideias ou dúvidas com os autores!</h2>
+                    <div class="icones-discussoes">
+                        <img src="imagens/icone1.png" />
+                        <img src="imagens/icone2.png" />
+                        <img src="imagens/icone3.png" />
+                    </div>
+                    <p class="discussoes-text">Sabia que o maior estímulo no desenvolvimento científico e cultural é
+                        a curiosidade? Deixe seus questionamentos ou sugestões para o autor!</p>
+                    <button onclick="criartopico()" class="criartopico-button" id="buttoncriartopico"><i
+                            class="fa-solid fa-plus"></i> criar
+                        topico</button>
+                </div>
+                <div class="novo-topico" id="novo-topico">
+                    <p>Tem uma dúvida ou sugestão? Compartilhe seu feedback com os autores!</p>
+                    <form name="form1" class="textbox-container">
+                        <label>Assunto</label>
+                        <input class="input-assunto" type="text"
+                            placeholder="Defina um tópico sucinto para notificar os autores..."></input>
+
+                        <label>Conteúdo</label>
+                        <textarea class="input-conteudo" name="field1"></textarea>
+                        <div class="container-buttonsrodape">
+                            <div class="style-buttons">
+                                <input type="button" onclick="javascript:addTag('b');" value="Bold">
+                                <input type="button" onclick="javascript:addTag('i');" value="Italic">
+                            </div>
+
+                            <button onclick="criartopico()" id="buttonenviar" class="button-enviar">Envar</button>
+                        </div>
+
+                    </form>
+                </div>
+                <div class="container-respostas">
+                    <div class="content-resposta">
+                        <h1 class="title-respostas">Assunto da pergunta aparece aqui</h1>
+                        <h2 class="subtitle-respostas">Carlos Henrique Santos</h2>
+                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da
+                            dimensão e impacto de processo formativo situado impacto de processo formativo
+                            processo...</p>
+                        <div class="icons-footer">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                            <i class="fa-solid fa-heart"></i>
+                            <p>1 like 1 resposta</p>
+                        </div>
+                    </div>
+                    <div class="content-resposta">
+                        <h1 class="title-respostas">Assunto da pergunta aparece aqui</h1>
+                        <h2 class="subtitle-respostas">Carlos Henrique Santos</h2>
+                        <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da
+                            dimensão e impacto de processo formativo situado impacto de processo formativo
+                            processo...</p>
+                        <div class="icons-footer">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                            <i class="fa-solid fa-heart"></i>
+                            <p>1 like 1 resposta</p>
+                        </div>
+                    </div>
             </section>
-
-            <section class="resumo">
-                <h1> Resumo </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis
-                    felis ut, commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus.
-                    Fusce auctor eros sed magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim
-                    accumsan sit amet. Donec finibus nisi tellus, ut viverra lorem vestibulum ut. Phasellus
-                    condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque
-                    sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus condimentum orci
-                    id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
-                    sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim
-                    accumsan sit ametl accumsant... <button>ver mais</button>
-            </section>
-            <section Class="discussoes">
-                <h1>Discussoes</h1>
-                <h2>Compartilhe suas ideias ou dúvidas com os autores!</h2>
-                <div class="icones">
-                    <img src="imagens/icone1.png" />
-                    <img src="imagens/icone2.png" />
-                    <img src="imagens/icone3.png" />
-                </div>
-                <p>Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade? Deixe seus
-                    questionamentos ou sugestões para o autor!</p>
-                <button input type="button">+criar tópico</button>
-
-                <div class="box-perguntas">
-
-                    <h1>Assunto da pergunta aparece aqui</h1>
-                    <p>Carlos Henrique Santos</p>
-                    <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
-                        e impacto de processo formativo situado impacto de processo formativo processo...</p>
-                    <img src="imagens/mais_informações.png" />
-                    <button>icone do coração</button>
-                </div>
-                <div class="box-perguntas">
-
-                    <h1>Assunto da pergunta aparece aqui</h1>
-                    <p>Carlos Henrique Santos</p>
-                    <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão
-                        e impacto de processo formativo situado impacto de processo formativo processo...</p>
-                    <img src="imagens/mais_informações.png" />
-                    <button>icone do coração</button>
-                </div>
-            </section>
-            <footer>
-                <img src="imagens/imagem_footer.png">
-
+            <footer class="footer">
+                <img src="imagens/imagem_footer.png" />
             </footer>
-
-
-            </section>
-
-
+        </div>
+        <!--Div da margem da pagina -->
+        </div>
 
     </main>
 </body>
